fixed contrast -> better readability of the links

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,7 +68,7 @@ h3 {
 	color: var(--highlow);
 }
 a {
-	color: var(--pine);
+	color: var(--love);
 }
 nav a {
 	margin-right: 10px;
